# BoardGameBuilder

./: .gitignore  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: build-docs.yml  github-release.yml  release.yml  tests.yml
bgameb/: __init__.py  __types.py  _types.py  _version.py  base.py  base_.py  cards.py  constructs.py  dices.py  errors.py  game.py  game_.py  games.py  items.py  items_.py  markers.py  player_.py  players.py  players_.py  rolled.py  rollers.py  rules.py  shakers.py  spaces.py  stuff.py  tools.py  tools_.py  types.py  utils.py
bgameb/newsfragments/: 103.feature  104.bugfix  104.feature  106.feature  111.bugfix  112.bugfix  115.feature  118.feature  119.feature  12.feature  123.feature  124.feature  125.feature  128.misc  13.feature  132.feature  132.removal  139.feature  139.removal  14.doc  14.feature  145.feature  145.removal  146.removal  147.cicd  148.doc  148.feature  148.removal  15.feature  150.feature  150.removal  166.bugfix  167.feature  168.bugfix  178.bugfix  178_1.bugfix  179.feature  180.feature  180.removal  186.bugfix  (+77 more)
docs/source/: conf.py  (+4 more)
src/: __init__.py
tests/: check.py  conftest.py  test_base.py  test_base_.py  test_cards.py  test_constructs.py  test_dices.py  test_game.py  test_game_.py  test_games.py  test_items.py  test_items_.py  test_markers.py  test_players.py  test_players_.py  test_rolled.py  test_rollers.py  test_rules.py  test_shakers.py  test_stuff.py  test_tools.py  test_tools_.py  test_utils.py
